# cuisines-pie-photochem

./: README.md  archean.py  input_files.py  utils.py
climate-settings/: adiabat_settings.yaml
cod-accra/: CMakeLists.txt
cod-accra/test1/: output_ModernEarth_codaccra_photochemclima_test1.txt  settings_codaccra.yaml  test1.f90
cod-accra/test2/: output_ModernEarth_codaccra_photochemclima_test2.txt  settings.yaml  species.yaml  test2.f90
slices/: .gitignore
slices/ArcheanEarth/: .gitignore  README.md  Sun_2.7Ga.txt  Sun_4.0Ga.txt  atmosphere.txt  atmosphere_ArcheanEarth.txt  settings_ArcheanEarth.yaml
slices/ArcheanEarth/test0/: ArcheanEarth_test0.txt  Photochem_test0.txt  README.md  atmosphere.txt  atmosphere_ArcheanEarth_test0.txt  eddy_massie.txt  settings.yaml  settings_climate.yaml  species_climate.yaml
slices/ArcheanEarth/test1/: ZPTH2O_Kasting1990_1km.txt  ZPT_structure.txt  photochem_ZPTH2O_Kasting1990_1km.txt  photochem_ZPT_structure.txt
slices/ArcheanEarth/test1/test1a/: ArcheanEarth_test1a.txt  Photochem_test1a.txt  atmosphere.txt  atmosphere_ArcheanEarth_test1a.txt  settings.yaml  settings_ArcheanEarth_test1a.yaml
slices/ArcheanEarth/test1/test1d/: ArcheanEarth_test1d_180K.txt  ArcheanEarth_test1d_288K.txt  Photochem_test1d_180K.txt  (+8 more)
slices/ArcheanEarth/test2/: ArcheanEarth_test2.txt  Photochem_test2.txt  atmosphere.txt  atmosphere_ArcheanEarth_test2.txt
slices/ArcheanEarth/test3/: ZPTEDD_Kasting1990_1km.txt  photochem_ZPTEDD_Kasting1990_1km.txt  settings_3e.yaml
slices/ArcheanEarth/test4/: ArcheanHaze_PhotochemPhotolysis.yaml
(+26 files in other folders)
